--- a/.github/workflows/daily_tweet.yml
+++ b/.github/workflows/daily_tweet.yml
@@ -17,9 +17,10 @@ jobs:
         run: pip install -r requirements.txt
       - name: Run Bot
         env:
+          # These must match the names in your GitHub Secrets settings EXACTLY
           X_API_KEY: ${{ secrets.X_API_KEY }}
           X_API_SECRET: ${{ secrets.X_API_SECRET }}
           X_ACCESS_TOKEN: ${{ secrets.X_ACCESS_TOKEN }}
           X_ACCESS_TOKEN_SECRET: ${{ secrets.X_ACCESS_TOKEN_SECRET }}
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }} 
         run: python main.py
